--- a/Web.config
+++ b/Web.config
@@ -11,9 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection"
-      connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-Movies-9521febd-8a3e-43d4-9b37-020553378e61;AttachDbFilename=|DataDirectory|\aspnet-Movies-9521febd-8a3e-43d4-9b37-020553378e61.mdf;Integrated Security=SSPI"
-      providerName="System.Data.SqlClient"/>
+    <add name="movie" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\movie.mdf;Integrated Security=True;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <authentication mode="None"/>
