--- a/Web.config
+++ b/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="movie" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\movie.mdf;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+    <add name="movie" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\movie.mdf;Integrated Security=True; Connect Timeout=60" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <authentication mode="None"/>
